refactoring, and documentation updates.